<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.kartik.grevocab.vm.FragmentReservationViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp10"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textStyle="bold"
                tools:text="@string/app_name"
                android:text="@{vm.selectedReservation.reservation.guestDetails.name}"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/party_size_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp20"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:text="@string/party_size"
                android:textColor="@color/secondaryText"
                app:layout_constraintTop_toBottomOf="@id/name"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/party_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:text="4"
                android:text="@{vm.selectedReservation.partySize}"
                android:layout_marginStart="@dimen/dp10"
                app:layout_constraintTop_toTopOf="@id/party_size_heading"
                app:layout_constraintStart_toEndOf="@id/party_size_heading"
                />

            <TextView
                android:id="@+id/time_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp20"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:text="@string/time"
                android:textColor="@color/secondaryText"
                app:layout_constraintTop_toBottomOf="@id/party_size_heading"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:text="04:15 pm"
                android:text="@{vm.selectedReservation.friendlyTime}"
                android:layout_marginStart="@dimen/dp20"
                app:layout_constraintTop_toTopOf="@id/time_heading"
                app:layout_constraintStart_toEndOf="@id/time_heading"
                />

            <TextView
                android:id="@+id/visit_notes_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp20"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:text="@string/visit_notes"
                android:textColor="@color/secondaryText"
                app:layout_constraintTop_toBottomOf="@id/time_heading"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/visit_notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:text="Some visit notes"
                android:text="@{vm.selectedReservation.reservation.guestDetails.notes}"
                app:layout_constraintTop_toBottomOf="@id/visit_notes_heading"
                app:layout_constraintStart_toStartOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
